# OkapiCppConnector

./: .gitignore  README.md  obsinf
src/: CMakeLists.txt
src/tle2passes/: CMakeLists.txt  tle2passes.cpp
tle/: iss.tle
